--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <h1>Home</h1>
-<ul>
-  <li><%= link_to 'about', about_path %></li>
-  <li><%= link_to image_tag('dog.png'), 'https://dogtime.com/dog-breeds/labradoodle#/slide/1' %></li>
-</ul>
+<nav>
+  <%= link_to 'About', about_path %> | <%= link_to 'Alpha Blog', articles_path %>
+</nav>
+
+<%= link_to image_tag('dog.png'), 'https://dogtime.com/dog-breeds/labradoodle#/slide/1' %>
