--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,4 @@
-<h1>Home</h1>
-<nav>
-  <%= link_to 'About', about_path %> | <%= link_to 'Alpha Blog', articles_path %>
-</nav>
-
-<%= link_to image_tag('dog.png'), 'https://dogtime.com/dog-breeds/labradoodle#/slide/1' %>
+<div class="jumbotron text-center">
+ <h1 class="display-4">Alpha Blog</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
