--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,20 +1,13 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevented the article from being created:</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class="row">
   <div class="col-12">
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form" }) do |f| %>
       <div class='form-group row'>
-        <div class='control-label col-sm-2'>
+        <div class='control-label col-2'>
           <%= f.label :title %>
         </div>
-        <div class='col-sm-8'>
+        <div class='col-8'>
           <%= f.text_field :title, class: 'form-control', placeholder: 'Title of Article', autofocus: true %>
         </div>
       </div>
@@ -27,13 +20,13 @@
         </div>
       </div>
       <div class='form-group row'>
-        <div class="control-label col-sm-10 offset-2">
+        <div class="control-label col-10 offset-2">
           <%= f.submit class: 'btn btn-primary btn-lg' %>
         </div>
       </div>
     <% end %>
 
-    <div class="col-xs-4 col-xs-offset-4 text-center">
+    <div class="col-4 offset-4 text-center">
       [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
     </div>
 
