--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,11 @@ $navbar-default-bg: #991637;
   font-size: 2em;
 }
 
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 0.5em;
+}
+
 footer {
   margin-top: 2em;
   padding-top: 2em;
