--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,14 @@
-<h1>Showing selected article</h1>
-
-<p>
-  Title: <%= @article.title %>
-</p>
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit this article", edit_article_path(@article) %> |
-<%= link_to "Back to articles listing", articles_path %>
+<h1 class="text-center h3">Title: <%= @article.title %></h1>
+<div class="card col-8 offset-2 pt-2 pb-2">
+  <h2 class="h4"><strong>Description:</strong></h2>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-sm btn-primary" %>
+    <%= link_to "Delete this article", article_path(@article),
+                method: :delete,
+                data: { confirm: "Are you sure you want to delete the article?"},
+                class: "btn btn-sm btn-danger" %>
+    <%= link_to "View all articles", articles_path, class: "btn btn-sm btn-success" %>
+  </div>
+</div>
