--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,7 +26,7 @@
       </div>
     <% end %>
 
-    <div class="col-4 offset-4 text-center">
+    <div class="text-center">
       [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
     </div>
 
