Add user data to articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,11 @@ $navbar-default-bg: #991637;
   font-size: 2em;
 }
 
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 0.5em;
+}
+
 .article-actions {
   border-top: 1px solid #eaeaea;
   padding-top: 0.5em;
