--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,7 +16,7 @@
           <%= f.label :description %>
         </div>
         <div class='col-sm-8'>
-          <%= f.text_area :description, class: 'form-control', placeholder: 'Body of Article' %>
+          <%= f.text_area :description, rols: 10, class: 'form-control', placeholder: 'Body of Article' %>
         </div>
       </div>
       <div class='form-group row'>
