Add edit update functionality and partial

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,16 +47,11 @@ footer a:hover {
   color: #222;
 }
 
-footer small {
-  float: left;
-}
-
 footer ul {
-  float: right;
   list-style: none;
 }
 
 footer ul li {
-  float: left;
+  display: inline-block;
   margin-left: 1em;
 }
