--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <footer class="footer">
-    <small>Copyright &copy; all things</small>
-    <nav>
+  <footer class="footer row">
+    <small class="col-6 text-left">Copyright &copy; all things</small>
+    <nav class="col-6 text-right">
       <ul>
         <li><%= link_to "About", about_path %></li>
       </ul>
