--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
-    <%= debug(params) if Rails.env.development? %>
+
+    <div class="container card">
+      <%= debug(params) if Rails.env.development? %>
+    </div>
   </body>
 </html>
