--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,4 @@
 <h1 class="text-center">Listing All Articles</h1>
-<% @articles.each do |article| %>
-  <div class="row">
-    <div class="col-8 offset-2">
-      <div class="card mb-5">
-        <h3 class="card-header text-bold">
-          <%= link_to article.title, articles_path(article) %>
-        </h3>
-        <div class="card-body">
-          <%= truncate(article.description, length: 100) %>
-          <div class="article-meta-details">
-            <small>
-              Created by: <%= article.user.username if article.user %>,
-              <%= time_ago_in_words(article.created_at) %> ago,
-              last updated: <%= time_ago_in_words(article.updated_at) %> ago
-            </small>
-          </div>
-        </div>
-        <div class="card-footer article-actions">
-          <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-sm btn-primary" %>
-          <%= link_to "Delete this article", article_path(article),
-                      method: :delete,
-                      data: { confirm: "Are you sure you want to delete the article?"},
-                      class: "btn btn-sm btn-danger" %>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
+
+<%= render 'article', obj: @articles %>
 
