--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,11 @@ $navbar-default-bg: #991637;
   padding-top: 0.5em;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
 footer {
   margin-top: 2em;
   padding-top: 2em;
