--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -3,7 +3,7 @@
     <div class="col-8 offset-2">
       <div class="card mb-5">
         <h3 class="card-header text-bold">
-          <%= link_to article.title, articles_path(article) %>
+          <%= link_to article.title, article_path(article) %>
         </h3>
         <div class="card-body">
           <%= truncate(article.description, length: 100) %>
