--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,16 @@
 <h1 class="text-center">Listing all Categories</h1>
 <div class="text-center">
-  <% @categories.each do |category| %>
-    <ul class="listing">
-      <div class="row">
-        <div class="card col-md-4 offset-4">
-          <li class="article-title">
+  <%= will_paginate %>
+  <ul class="listing">
+    <% @categories.each do |category| %>
+      <li class="article-title">
+        <div class="row mb-2">
+          <div class="card col-md-4 offset-4 pt-2 pb-2">
             <%= link_to "#{category.name}", categories_path(category) %>
-          </li>
+          </div>
         </div>
-      </div>
-    </ul>
-  <% end %>
+      </li>
+    <% end %>
+  </ul>
+  <%= will_paginate %>
 </div>
