--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,6 +19,13 @@
           <%= f.text_area :description, rols: 10, class: 'form-control', placeholder: 'Body of Article' %>
         </div>
       </div>
+      <div class='row'>
+        <div class='form-check form-check-inline col-10 offset-2'>
+          <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+            <% cb.label(class: "form-check-label input_checkbox") {cb.check_box(class:"checkbox form-check-input") + cb.text} %>
+          <% end %>
+        </div>
+      </div>
       <div class='form-group row'>
         <div class="control-label col-10 offset-2">
           <%= f.submit class: 'btn btn-primary btn-lg' %>
