--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,6 +7,7 @@
         <div class="row mb-2">
           <div class="card col-md-4 offset-4 pt-2 pb-2">
             <%= link_to "#{category.name}", categories_path(category) %>
+            <small><%= pluralize(category.articles.count, "article") %></small>
           </div>
         </div>
       </li>
