--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">Create new Category</h1>
+<h1 class="text-center">Edit Category Name</h1>
 
 <%= render 'shared/errors', obj: @category %>
 
