--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,8 @@
 <h1 class="text-center"><%= "Category: " + @category.name %></h1>
 <div class="text-center">
+  <% if logged_in?and current_user.admin %>
+    <%= link_to 'Edit Category Name', edit_category_path(@category), class: 'badge badge-primary mb-4' %>
+  <% end %>
   <%= will_paginate @category_articles %>
 </div>
 <%= render 'articles/article', obj: @category_articles %>
